Fix display of FIC Logo on small screens

--- a/fec/core/static/less/fec.less
+++ b/fec/core/static/less/fec.less
@@ -30,6 +30,9 @@
   }
 }
 
+/* Make the FIC Logo a separate block from it's surrounding text */
+a#fic-link { display: block; }
+
 
 /* Community Customizations */
 
